[package]
name = "jokeset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
csv-async = { version = "1.2.6", features = ["tokio"] }
indicatif = { version = "0.17.3", features = ["tokio"] }
lazy_static = "1.4.0"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["tokio-rustls", "rustls", "blocking"] }
ron = "0.8.0"
roux = { version = "2.2.7", features = ["rustls"] }
scraper = "0.16.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
structopt = { version = "0.3.26", features = ["color", "suggestions"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tokio-rayon = "2.1.0"

[profile.release]
strip = true
lto = 'thin'
